--- a/contact.html
+++ b/contact.html
@@ -84,16 +84,16 @@
 
         <div class="people">
             <div>
-                <img src="neeraj.jpg" style="border-radius: 50%; height: 150px; width: 150px;" alt="">
-                <p><span>Neeraj Soni</span>Web Developer. <br>Phone no. : 91+ 8962677644 <br>Email : sonineeraj0405@gmail.com</p>
+                <img src="" style="border-radius: 50%; height: 150px; width: 150px;" alt="">
+                <p><span>Parth Soni</span>Web Developer. <br>Phone no. : 91+ 8962677644 <br>Email : parthsoni0567@gmail.com</p>
             </div>
             <!-- <div>
-                <img src="neeraj.jpg" style="border-radius: 50%; height: 150px; width: 150px;" alt="">
-                <p><span>Neeraj Soni</span>Web Developer. <br>Phone no. : 91+ 8962677644 <br>Email : sonineeraj0405@gmail.com</p>
+                <img src="" style="border-radius: 50%; height: 150px; width: 150px;" alt="">
+                <p><span>Neeraj Soni</span>Web Developer. <br>Phone no. : 91+ 8962677644 <br>Email : parthsoni0567@gmail.com</p>
             </div>
             <div>
-                <img src="neeraj.jpg" style="border-radius: 50%; height: 150px; width: 150px;" alt="">
-                <p><span>Neeraj Soni</span>Web Developer. <br>Phone no. : 91+ 8962677644 <br>Email : sonineeraj0405@gmail.com</p>
+                <img src="" style="border-radius: 50%; height: 150px; width: 150px;" alt="">
+                <p><span>Neeraj Soni</span>Web Developer. <br>Phone no. : 91+ 8962677644 <br>Email : parthsoni0567@gmail.com</p>
             </div> -->
         </div>
     </section>
